@@ -70,7 +70,44 @@ class SecurityRule extends Rule
     );
 
 
+    /*
+    const __UserIDType_Any = 0;
+    const __UserIDType_Unknown = 1;
+    const __UserIDType_Known = 2;
+    const __UserIDType_PreLogon = 3;
+    const __UserIDType_Custom = 4;
 
+    private $__RuleTypes = Array(
+        self::__UserIDType_Any => 'any',
+        self::__UserIDType_Unknown => 'unknown',
+        self::__UserIDType_Known => 'known',
+        self::__UserIDType_PreLogon => 'pre-logon',
+        self::__UserIDType_Custom => 'custom'
+    );
+
+    private $_userIDType = self::__UserIDType_Any;
+    private $_users = Array();
+
+    function userID_IsAny()
+    {
+        return $this->_userIDType == self::__UserIDType_Any;
+    }
+    function userID_IsUnknown()
+    {
+        return $this->_userIDType == self::__UserIDType_Unknown;
+    }
+    function userID_IsKnown()
+    {
+        return $this->_userIDType == self::__UserIDType_Known;
+    }
+    function userID_IsPreLogon()
+    {
+        return $this->_userIDType == self::__UserIDType_PreLogon;
+    }
+    function userID_IsCustom()
+    {
+        return $this->_userIDType == self::__UserIDType_Custom;
+    }*/
 
     protected $ruleType = self::TypeUniversal;
 
