@@ -1,6 +1,13 @@
 CHANGELOG
 
 1.5.6
+* PANConf : enhanced support to load pushed panorama config
+* RuleStore : new function to get rules from parent DeviceGroups
+
+utils:
+rules-edit : loading of firewall configurations can now get panorama pushed config, use option 'loadPanoramaPushedConfig'
+
+
 
 1.5.5
 core:
